<resources>
    <string name="app_name">SAFETY 24/7</string>

    <!-- Strings related to login -->
    <string name="password">Password</string>
    <string name="user">Username</string>
    <string name="login">LOGIN</string>
    <string name="signup">SignUp?</string>
    <string name="signup1">SignUp</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">E-Mail</string>
    <string name="ph">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_location">Map</string>
</resources>
