<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView01"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/LinearLayout01"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ripple="http://schemas.android.com/apk/res-auto">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingBottom="20dp"
                android:background="@drawable/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingTop="40dp"
        android:text="Sign Up"

        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/fname_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:hint="@string/fname"
        android:textSize="20dp"
        android:paddingLeft="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/lname_editText"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lname"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>


    <EditText
        android:id="@+id/email_editText"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>


    <EditText
        android:id="@+id/sign_user_editText"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:hint="@string/user"
        android:textColor="@color/white"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/sign_pass_editText"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/confirm_pass_editText"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/ph_editText"
        android:textColorHint="@color/white"
        android:textColor="@color/white"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ph"
        android:textSize="20dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <com.andexert.library.RippleView
            android:id="@+id/signupRipple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            >
        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:text="@string/signup1"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:onClick="onSignupClicked"
            />
        </com.andexert.library.RippleView>


    </LinearLayout>
</LinearLayout>
    </ScrollView>