<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/unnamed"

      android:gravity="center"
      android:orientation="vertical"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      tools:context="in.college.safety247.MainActivity"
      >

      <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:text="Login to your account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold"
            />


      <EditText
            android:id="@+id/user_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fields"
            android:hint="@string/user"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:textSize="20dp"
            />

      <EditText
            android:id="@+id/pass_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/fields"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textSize="20dp"
            />

      <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@color/cyan"
            android:onClick="buttonClicked"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            />

      <TextView
            android:id="@+id/signupTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:onClick="buttonClicked"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            />

</LinearLayout>
